# personal_api

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py
app/box/: __init__.py  core.py  repository.py  runtime.py
app/core/: config.py  logging.py  security.py  server.py
app/managers/: action_manager.py  calculator_manager.py
app/modules/boxes/: router.py  schemas.py
app/modules/calculations/: __init__.py  router.py  schemas.py  service.py
app/modules/calculations/calculators/: __init__.py  equilateral_triangle.py  oven.py
app/modules/calculations/functions/: __init__.py  basic.py
app/modules/system/: __init__.py  actions.py  box.py  router.py
app/shapes/: __init__.py  equilateral_triangle.py  oven.py
app/tools/: __init__.py  action.py  boxes.py  files.py  http.py  math.py  registry.py  values.py
