[project]
name = "personal-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ruff>=0.12.0",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
